# discord_bot_test

./: .env.template  README.md  TOOLS_USAGE.md  main.py  pyproject.toml  test_agent.py
deprecated/: main.py
src/: bot.py
src/agent/: agent.py
src/agent/tools/: tools.py
